--- a/library.bib
+++ b/library.bib
@@ -182,9 +182,9 @@ MRREVIEWER = {Igor Belegradek},
 @article{wald,
 	author = {Wald, A.},
 	hyphenation = {german},
-	journal = {Ergebnisse eines mathematischen Kolloquium},
+	journal = {Ergebnisse eines mathematischen Kolloquiums},
 	language = {german},
 	pages = {24--46},
-	title = {Begr\"undung eiiner Koordinatenlosen Differentialgeometrie der Fl\"achen},
+	title = {Begr\"undung einer Koordinatenlosen Differentialgeometrie der Fl\"achen},
 	volume = {6},
 	year = {1935}}
